LF-9485-1 arm64: dts: imx93: add gpr support for the imx93 A1 chip
commit  52dd192397827af2995c2ac3ad06c8b61b6cfef6 from
https://github.com/nxp-imx/linux-imx lf-6.1.y

imx93 A1 chip add a method to trigger flexcan ipg_stop signal in gpr.
So add it here, and switch to use this method for the flexcan.

Reviewed-by: Jun Li <jun.li@nxp.com>
Signed-off-by: Haibo Chen <haibo.chen@nxp.com>
Signed-off-by: Xiaolei Wang <xiaolei.wang@windriver.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/arch/arm64/boot/dts/freescale/imx93.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx93.dtsi
@@ -371,7 +371,7 @@
 			};
 
 			flexcan1: can@443a0000 {
-				compatible = "fsl,imx93-flexcan", "fsl,imx8mp-flexcan";
+				compatible = "fsl,imx93-flexcan";
 				reg = <0x443a0000 0x10000>;
 				interrupts = <GIC_SPI 8 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&clk IMX93_CLK_BUS_AON>,
@@ -381,6 +381,7 @@
 				assigned-clock-parents = <&clk IMX93_CLK_SYS_PLL_PFD1_DIV2>;
 				assigned-clock-rates = <40000000>;
 				fsl,clk-source = /bits/ 8 <0>;
+				fsl,stop-mode = <&anomix_ns_gpr 0x14 0>;
 				status = "disabled";
 			};
 
@@ -805,7 +806,7 @@
 			};
 
 			flexcan2: can@425b0000 {
-				compatible = "fsl,imx93-flexcan", "fsl,imx8mp-flexcan";
+				compatible = "fsl,imx93-flexcan";
 				reg = <0x425b0000 0x10000>;
 				interrupts = <GIC_SPI 51 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&clk IMX93_CLK_BUS_WAKEUP>,
@@ -815,6 +816,7 @@
 				assigned-clock-parents = <&clk IMX93_CLK_SYS_PLL_PFD1_DIV2>;
 				assigned-clock-rates = <40000000>;
 				fsl,clk-source = /bits/ 8 <0>;
+				fsl,stop-mode = <&wakeupmix_gpr 0x0C 2>;
 				status = "disabled";
 			};
 
