--- a/arch/arm64/boot/dts/freescale/imx8ulp.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8ulp.dtsi
@@ -1083,10 +1083,12 @@
 					power-domains = <&scmi_devpd IMX8ULP_PD_ISI>;
 					interface = <2 0 2>;
 					no-reset-control;
+					runtime_suspend;
 					status = "disabled";
 
 					cap_device {
 						compatible = "imx-isi-capture";
+						runtime_suspend;
 						status = "disabled";
 					};
 				};
@@ -1117,6 +1119,7 @@
 								<105600000>,
 								<79200000>,
 								<79200000>;
+					runtime_suspend;
 					status = "disabled";
 				};
 			};
