LF-9574-2 arm64: dts: imx93: correct the offset of soc-uid
commit  6ae3c85a05c97e41456af6ab80cf0e3486790b7e from
https://github.com/nxp-imx/linux-imx lf-6.1.y

Because the definition of offset becomes in bytes, need to use the
correct offset of soc-uid.

Signed-off-by: Clark Wang <xiaoning.wang@nxp.com>
Reviewed-by: Peng Fan <peng.fan@nxp.com>
Signed-off-by: Xiaolei Wang <xiaolei.wang@windriver.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/arch/arm64/boot/dts/freescale/imx93.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx93.dtsi
@@ -1293,8 +1293,8 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
-			imx93_uid: soc-uid@6 {
-				reg = <0x30 0x10>;
+			imx93_uid: soc-uid@c0 {
+				reg = <0xc0 0x10>;
 			};
 
 			imx93_soc: imx93-soc {
