LF-9716 arm64: dts: imx93-14x14-evk: correct the GPIO pins for usdhc3
commit  cd21416e925ff34ca0df9d112cc4419a2370d9f9 from
https://github.com/nxp-imx/linux-imx lf-6.1.y

According to SPF-55129 A2, the reset pin is #12 from pcal6524,
and the WiFi regulator(M2_nDIS1) is #20 from pcal6524.
Both indexes start from 0 here.

Signed-off-by: Shenwei Wang <shenwei.wang@nxp.com>
Reviewed-by: Frank Li <frank.li@nxp.com>
Signed-off-by: Xiaolei Wang <xiaolei.wang@windriver.com>
Signed-off-by: Meng Li <Meng.Li@windriver.com>

--- a/arch/arm64/boot/dts/freescale/imx93-14x14-evk.dts
+++ b/arch/arm64/boot/dts/freescale/imx93-14x14-evk.dts
@@ -163,7 +163,16 @@
 
 	usdhc3_pwrseq: usdhc3_pwrseq {
 		compatible = "mmc-pwrseq-simple";
-		reset-gpios = <&pcal6524 20 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&pcal6524 12 GPIO_ACTIVE_LOW>;
+	};
+
+	reg_usdhc3_vmmc: usdhc3-vmmc {
+		compatible = "regulator-fixed";
+		regulator-name = "M2_WiFi_ON";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		gpios = <&pcal6524 20 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
 	};
 
 	reg_dvdd_sel: regulator-dvdd_sel {
@@ -617,7 +626,7 @@
 	pinctrl-1 = <&pinctrl_usdhc3>, <&pinctrl_usdhc3_wlan>;
 	pinctrl-2 = <&pinctrl_usdhc3>, <&pinctrl_usdhc3_wlan>;
 	mmc-pwrseq = <&usdhc3_pwrseq>;
-	pinctrl-assert-gpios = <&pcal6524 13 GPIO_ACTIVE_HIGH>;
+	vmmc-supply = <&reg_usdhc3_vmmc>;
 	bus-width = <4>;
 	keep-power-in-suspend;
 	non-removable;
