--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -203,12 +203,14 @@ kconfig-static:
 
 sign-code:
   stage: sign-code
-  image: $SALSA_CI_IMAGES_BASE
+  image: $SALSA_CI_IMAGES_BASE_ARM64
   extends:
     - .artifacts-default-expire
   except:
     variables:
       - $CI_COMMIT_TAG != null
+  variables:
+    BUILD_ARCH: 'arm64'
   script:
     - |
       apt-get update && eatmydata apt-get install --no-install-recommends -y \
@@ -233,10 +235,12 @@ sign-code:
   needs:
     - job: build
       artifacts: true
+  tags:
+    - arm64
 
 build-signed:
   stage: build-signed
-  image: $SALSA_CI_IMAGES_BASE
+  image: $SALSA_CI_IMAGES_BASE_ARM64
   extends:
     - .artifacts-default-expire
   except:
@@ -248,6 +252,7 @@ build-signed:
     CCACHE_WORK_DIR: ${CI_PROJECT_DIR}/.ccache
     DB_BUILD_PARAM: ${SALSA_CI_DPKG_BUILDPACKAGE_ARGS}
     DB_BUILD_TYPE: full
+    BUILD_ARCH: 'arm64'
   script:
     # Unpack the source
     - |
@@ -286,6 +291,8 @@ build-signed:
       artifacts: true
     - job: sign-code
       artifacts: true
+  tags:
+    - arm64
 
 lintian-signed:
   extends: .test-lintian
