debian: Fix the reference of support and changes package name
With the change of commit fdacdbec6f18 ("debian/changelog: Add imx
suffix in package name"), the new generated support and changes package
name becomes linux-imx*. So fix all the references of them according
to this change.

Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -226,7 +226,7 @@ sign-code:
     # Sign the code and build a source package
     - |
       "$kernel_team_dir"/scripts/debian-test-sign \
-        ${WORKING_DIR}/linux_*_${BUILD_ARCH}.changes \
+        ${WORKING_DIR}/linux*_${BUILD_ARCH}.changes \
         debian/certs/ci-test-sign/ci-test-sign-key.pem \
         debian/certs/ci-test-sign/ci-test-sign.pem
   artifacts:
@@ -267,7 +267,7 @@ build-signed:
       apt-get install --no-install-recommends -y \
         ${WORKING_DIR}/linux-image-*-unsigned_*_${BUILD_ARCH}.deb \
         ${WORKING_DIR}/linux-kbuild-*[0-9]_*_${BUILD_ARCH}.deb \
-        ${WORKING_DIR}/linux-support-*_all.deb
+        ${WORKING_DIR}/linux*-support-*_all.deb
 
     # Do the same as the common .build-definition script
     - !reference [.build-before-script]
