debian: Add imx infix for the kbuild package
The kbuild package is essential for the building of signed package,
so add a imx infix for this package name to make sure there is no
name conflict between two different BSPs. This only change the package
name, we choose to keep the original directories of installed files,
on purpose, otherwise it may break the tools such as kernel-team.

Signed-off-by: Kevin Hao <kexin.hao@windriver.com>

--- a/debian/templates/tools-versioned.control.in
+++ b/debian/templates/tools-versioned.control.in
@@ -1,4 +1,4 @@
-Package: linux-kbuild-@version@
+Package: @source_basename@-kbuild-@version@
 Meta-Rules-Target: kbuild
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Architecture: linux-any
