--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -215,7 +215,7 @@ sign-code:
     - |
       apt-get update && eatmydata apt-get install --no-install-recommends -y \
         dpkg-dev git openssl python3 python3-debian sbsigntool \
-        ${WORKING_DIR}/linux-kbuild-*[0-9]_*_${BUILD_ARCH}.deb
+        ${WORKING_DIR}/linux*-kbuild-*[0-9]_*_${BUILD_ARCH}.deb
 
     # Fetch kernel-team repository
     - kernel_team_dir="$(mktemp -d)"
@@ -266,7 +266,7 @@ build-signed:
     - |
       apt-get install --no-install-recommends -y \
         ${WORKING_DIR}/linux-image-*-unsigned_*_${BUILD_ARCH}.deb \
-        ${WORKING_DIR}/linux-kbuild-*[0-9]_*_${BUILD_ARCH}.deb \
+        ${WORKING_DIR}/linux*-kbuild-*[0-9]_*_${BUILD_ARCH}.deb \
         ${WORKING_DIR}/linux*-support-*_all.deb
 
     # Do the same as the common .build-definition script
@@ -282,7 +282,7 @@ build-signed:
       - ${WORKING_DIR}/linux-headers-*_${BUILD_ARCH}.deb
       - ${WORKING_DIR}/linux-headers-*-common_*_all.deb
       - ${WORKING_DIR}/linux-image-*_${BUILD_ARCH}.deb
-      - ${WORKING_DIR}/linux-kbuild-*[0-9]_*_${BUILD_ARCH}.deb
+      - ${WORKING_DIR}/linux*-kbuild-*[0-9]_*_${BUILD_ARCH}.deb
       - ${WORKING_DIR}/linux-compiler-*_${BUILD_ARCH}.deb
     exclude:
       - ${WORKING_DIR}/linux-image-*-unsigned_*_${BUILD_ARCH}.deb
