--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -300,3 +300,5 @@ piuparts-signed:
 
 shared-aptly:
   extends: .publish-shared-aptly
+  variables:
+    SALSA_CI_DISABLE_PUBLISH_TO_SHARED_APTLY: 1
