salsa-ci.yml: implement a shortcut to the package repository
This workaround is used to solve the kernel build issue:
$ eatmydata apt-get build-dep ${HOST_ARCH:+--host-architecture
${HOST_ARCH} -Pcross,nocheck} --no-install-recommends -y $aptopts .
E: Unsupported file . given on commandline
E: Must specify at least one package to check builddeps for

It is caused by missing debian/control file, while the control
file is missing because it isn't generated after the
"apt-get update" failure in extract-source job.

Currently we have restrictions on access to the package repository
which will prevent runners from gaining access. Work around this by
providing the private IP in the container's hosts file, shortcutting
traffic within the VPC where the Gitlab runners exist.

Signed-off-by: Li Zhou <li.zhou@windriver.com>

--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -36,6 +36,9 @@ stages:
 extract-source:
   extends: .provisioning-extract-source
   after_script:
+    # Temporary workaround to shortcut to package mirror
+    - echo "${SHARED_APTLY_HOST_IP} ${SHARED_APTLY_HOST_NAME}" >> /etc/hosts
+
     # Install dependencies of gencontrol.py, genorig.py, and debian/rules orig
     - apt-get update
     - |
